RESOLVED FIXED185030
Token misspelled "tocken" in error message string
https://bugs.webkit.org/show_bug.cgi?id=185030
Summary Token misspelled "tocken" in error message string
Rick Waldron
Reported 2018-04-26 09:12:13 PDT
Example: SyntaxError: Unexpected escaped characters in keyword tocken: 'aw\u0061it'
Attachments
Fix typo "tocken" => "token" in SyntaxError message string (131.43 KB, patch)
2018-04-26 10:11 PDT, Rick Waldron
mark.lam: review-
Fix typo "tocken" => "token" in SyntaxError message string (36.05 KB, patch)
2018-04-26 10:19 PDT, Rick Waldron
no flags
Rick Waldron
Comment 1 2018-04-26 09:24:01 PDT
I have a patch coming
Rick Waldron
Comment 2 2018-04-26 10:11:57 PDT
Created attachment 338885 [details] Fix typo "tocken" => "token" in SyntaxError message string
Mark Lam
Comment 3 2018-04-26 10:18:53 PDT
Comment on attachment 338885 [details] Fix typo "tocken" => "token" in SyntaxError message string View in context: https://bugs.webkit.org/attachment.cgi?id=338885&action=review > JSTests/ChangeLog:390 > - > + Please change your editor to not automatically strip leading spaces like these. It makes your patch a lot less readable. Can you please redo your patch without all of these accidental leading space removals? It's ok to remove some if the leading space is on lines of code immediately adjacent too your changes. It's not ok to remove all leading spaces elsewhere in the file. Thanks.
Rick Waldron
Comment 4 2018-04-26 10:19:16 PDT
Created attachment 338888 [details] Fix typo "tocken" => "token" in SyntaxError message string
Rick Waldron
Comment 5 2018-04-26 10:21:23 PDT
(In reply to Mark Lam from comment #3) > Comment on attachment 338885 [details] > Fix typo "tocken" => "token" in SyntaxError message string > > View in context: > https://bugs.webkit.org/attachment.cgi?id=338885&action=review > > > JSTests/ChangeLog:390 > > - > > + > > Please change your editor to not automatically strip leading spaces like > these. It makes your patch a lot less readable. Can you please redo your > patch without all of these accidental leading space removals? It's ok to > remove some if the leading space is on lines of code immediately adjacent > too your changes. It's not ok to remove all leading spaces elsewhere in the > file. Thanks. Sorry about that—it wasn't my intention to include all the incidental whitespace changes. I've uploaded a corrected patch—Thanks for your patience
Saam Barati
Comment 6 2018-04-26 10:59:15 PDT
Comment on attachment 338888 [details] Fix typo "tocken" => "token" in SyntaxError message string oh boy. Thanks for fixing this r=me
WebKit Commit Bot
Comment 7 2018-04-28 16:32:32 PDT
Comment on attachment 338888 [details] Fix typo "tocken" => "token" in SyntaxError message string Clearing flags on attachment: 338888 Committed r231142: <https://trac.webkit.org/changeset/231142>
WebKit Commit Bot
Comment 8 2018-04-28 16:32:34 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2018-04-28 16:33:22 PDT
Note You need to log in before you can comment on or make changes to this bug.